<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgetPasswordActivity">


    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/forget_page_error"
        android:layout_width="@dimen/default_width_input"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/figma_color_error"
        android:text="@string/register_password_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />


    <EditText
        android:id="@+id/forget_passord_email"
        android:layout_width="@dimen/default_width_input"
        android:layout_height="@dimen/default_height_input"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_rounded_input"
        android:hint="@string/login_email"
        android:textSize="20dp"
        android:paddingLeft="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_page_error" />

    <Button
        android:id="@+id/forget_reset_password_button"
        android:layout_width="@dimen/default_width_input"
        android:layout_height="@dimen/default_height_input"
        android:textSize="20dp"
        android:background="@drawable/bg_rounded"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:text="@string/login_connexion_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_passord_email" />

    <Button
        android:id="@+id/forget_reset_password_return_login"
        android:layout_width="@dimen/default_width_input"
        android:layout_height="@dimen/default_height_input"
        android:textSize="20dp"
        android:visibility="gone"
        android:background="@drawable/bg_rounded"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:text="@string/register_login_link"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_reset_password_button" />


</androidx.constraintlayout.widget.ConstraintLayout>