<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".pages.ViewProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar_profile_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/TitleAppStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/account_user_title_page"
            android:textColor="@color/figma_first_color"
            android:textSize="20dp" />

    </androidx.appcompat.widget.Toolbar>
    
    <RelativeLayout
            android:id="@+id/container_image_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar_profile_user">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/container_image_profile"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/view_profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_account"
                        android:transitionName="small_image" />

                </androidx.cardview.widget.CardView>

                <View
                    android:id="@+id/view_separation"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="-2dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/container_image_profile"
                    app:layout_constraintTop_toTopOf="@+id/container_image_profile"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/view_profile_username"
                    style="@style/DefaultTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_username"
                    android:textColor="@color/black"
                    android:textSize="23dp"
                    android:layout_marginLeft="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/view_separation"
                    app:layout_constraintStart_toEndOf="@+id/container_image_profile"/>


                <LinearLayout
                    android:id="@+id/container_num_post_and_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/view_profile_username"
                    app:layout_constraintTop_toBottomOf="@+id/view_separation">

                    <TextView
                        android:id="@+id/view_profile_num_post"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="35dp"
                        android:text="@string/account_num_post"
                        style="@style/DefaultTextStyle"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/view_profile_num_friend"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:text="@string/account_num_friend"
                        style="@style/DefaultTextStyle"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_num_post_and_friend_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/view_profile_username"
                    app:layout_constraintTop_toBottomOf="@+id/container_num_post_and_friend">

                    <TextView
                        android:id="@+id/view_profile_num_post_label"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="35dp"
                        android:fontFamily="@font/roboto"
                        android:textSize="10dp"
                        android:text="@string/account_num_post_label" />

                    <TextView
                        android:id="@+id/view_profile_num_friend_label"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/account_num_friend_label" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>
    
    <Button
        android:id="@+id/view_profile_btn_modifier_profil"
        android:layout_width="@dimen/default_width_input"
        android:layout_height="@dimen/default_height_input"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_btn_update"
        android:textSize="10dp"
        android:textColorHint="@color/white"
        android:hint="@string/account_btn_inviter_friend"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/DefaultTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/container_image_profile_layout" />

    <FrameLayout
        android:id="@+id/progressbar_invitation"
        android:layout_width="@dimen/default_width_input"
        android:layout_height="@dimen/default_height_input"
        android:visibility="gone"
        android:background="@drawable/background_btn_update"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_image_profile_layout">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/container_bloc_post_and_statut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_btn_modifier_profil">
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/default_height_input"
            android:paddingTop="11dp"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:layout_weight="2"
            android:textAlignment="center"
            android:background="@drawable/bg_not_rounded"
            android:text="@string/account_post_label"
            style="@style/DefaultTextStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/view_profile_notifie_data"
        style="@style/TitleAppStyle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/account_notifie_data"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_bloc_post_and_statut" />


    <ProgressBar
        android:id="@+id/view_profile_progressbar_load_data"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/figma_first_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_bloc_post_and_statut"/>

    <GridView
        android:id="@+id/view_profile_publication_gridView"
        android:numColumns="3"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/container_bloc_post_and_statut"/>

</androidx.constraintlayout.widget.ConstraintLayout>